# kairnz

./: .dockerignore  .gitignore  CAIRN_SPEC.md  Cargo.toml  Dockerfile  KAIRNZ_SPEC.md  Taskfile.yml  package.json
config/: example-run.yaml  names.yaml  presets.yaml
crates/cairn-bench/: Cargo.toml
crates/cairn-bench/src/: main.rs  metrics.rs  report.rs  run.rs  runner.rs  spec.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: actions.rs  apply.rs  check.rs  config.rs  game.rs  lib.rs  movement.rs  outcome.rs  piece.rs  position.rs  square.rs  turn.rs  zobrist.rs
crates/cairn-core/tests/: perft.rs  properties.rs
crates/cairn-policy/: Cargo.toml
crates/cairn-policy/src/: eval.rs  greedy.rs  lib.rs  mcts.rs  policy.rs  random.rs
crates/kairnz-bench/: Cargo.toml
crates/kairnz-bench/src/: main.rs  metrics.rs  report.rs  runner.rs  spec.rs
crates/kairnz-core/: Cargo.toml
crates/kairnz-core/src/: actions.rs  apply.rs  config.rs  game.rs  lib.rs  movement.rs  outcome.rs  piece.rs  position.rs  square.rs  turn.rs  zobrist.rs
crates/kairnz-core/tests/: perft.rs  properties.rs
crates/kairnz-encode/: Cargo.toml
crates/kairnz-encode/src/: action_index.rs  canonical.rs  lib.rs  mask.rs  planes.rs
crates/kairnz-encode/tests/: properties.rs
crates/kairnz-onnx/: Cargo.toml
crates/kairnz-onnx/src/: batch.rs  batched_mcts.rs  evaluator.rs  lib.rs  mcts.rs  policy.rs
crates/kairnz-onnx/tests/: batch.rs  batched_mcts.rs  seam.rs  server.rs
crates/kairnz-onnx/tests/fixtures/: random_init.onnx
crates/kairnz-policy/: Cargo.toml
crates/kairnz-policy/src/: eval.rs  greedy.rs  lib.rs  mcts.rs  policy.rs  random.rs
crates/kairnz-selfplay/: Cargo.toml
crates/kairnz-selfplay/src/: gate.rs  lib.rs  parallel.rs  play.rs  sample.rs  shard.rs
docs/: RUNBOOK-remote-training.md
docs/superpowers/plans/: 2026-06-23-cairn-phase1.md  2026-06-23-kairnz-phase1.md  2026-06-24-alphazero-plan1-encoding.md  2026-06-24-alphazero-plan2-onnx-seam.md  2026-06-24-alphazero-plan3-neural-mcts.md  2026-06-24-alphazero-plan4-selfplay.md  2026-06-24-alphazero-plan5-trainer.md  2026-06-24-alphazero-plan6-orchestration.md  2026-06-24-alphazero-plan7-parallel-selfplay.md  2026-06-24-alphazero-plan8-warmstart-status.md  2026-06-24-alphazero-plan9-remote-training.md  2026-06-24-plan10-play-vs-ai.md  2026-06-24-plan9-remote-training-FULL.md
docs/superpowers/specs/: 2026-06-23-cairn-phase1-design.md  2026-06-23-kairnz-phase1-design.md  2026-06-24-alphazero-selfplay-pipeline-design.md
scripts/: run_remote.sh  setup_pod.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  main.rs  state.rs  view.rs
train/: README.md  pyproject.toml
train/kairnz_train/: __init__.py  dashboard.py  dataset.py  model.py  onnx_export.py  orchestrate.py  train.py
train/kairnz_train/static/: dashboard.html
train/scripts/: export_random_onnx.py  loop.py  status_window.py  train.py
train/tests/: test_dashboard.py  test_dataset.py  test_onnx_export.py  test_orchestrate.py  test_orchestrate_warmstart.py  test_parity.py  test_train.py
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte
ui/src/components/: Board.svelte  ConfigPanel.svelte  MoveHistory.svelte  Piece.svelte  Sidebar.svelte
ui/src/lib/: api.ts  names.ts  notation.ts  types.ts  yaml.d.ts
