[workspace]
resolver = "2"
members = ["crates/cairn-core", "crates/cairn-policy", "crates/cairn-bench"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
rand_pcg = "0.3"
clap = { version = "4", features = ["derive"] }
proptest = "1"
