[project]
name = "kairnz-train"
version = "0.1.0"
description = "Kairnz AlphaZero training and ONNX export."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "safetensors>=0.4",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
