[package]
name = "cairn-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-core = { path = "../cairn-core" }
cairn-policy = { path = "../cairn-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
