[package]
name = "kairnz-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kairnz-core = { path = "../kairnz-core" }
kairnz-policy = { path = "../kairnz-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
